- Fixed column height for What is Speck Page when on smaller screen sizes

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -722,8 +722,25 @@ body.shrink {
 }
 
 // =====================================================================================================================
+// What is Speck Page
+// =====================================================================================================================
+
+#what_is_speck {
+  @media(max-width: $LARGE_DEVICE_WIDTH) {
+    .panel-body {
+      min-height: 360px;
+    }
+  }
+  @media(max-width: $MEDIUM_DEVICE_WIDTH) {
+    .panel-body {
+      min-height: 0px;
+    }
+  }
+}
+
+// =====================================================================================================================
 // Fine Particles Page
-//
+// =====================================================================================================================
 
 #particles {
   margin-top: 42px;
